dnl Process this file with autoconf to produce a configure script. -*-m4-*-

AC_INIT(include/kmeans.h)


FREESPEECH_MAJOR_VERSION=0
FREESPEECH_MINOR_VERSION=8
FREESPEECH_MICRO_VERSION=1
FREESPEECH_VERSION=$FREESPEECH_MAJOR_VERSION.$FREESPEECH_MINOR_VERSION.$FREESPEECH_MICRO_VERSION
FREESPEECH_INTERFACE_AGE=0
FREESPEECH_BINARY_AGE=0


AC_SUBST(FREESPEECH_MAJOR_VERSION)
AC_SUBST(FREESPEECH_MINOR_VERSION)
AC_SUBST(FREESPEECH_MICRO_VERSION)
AC_SUBST(FREESPEECH_INTERFACE_AGE)
AC_SUBST(FREESPEECH_BINARY_AGE)
AC_SUBST(FREESPEECH_VERSION)

# libtool versioning
LT_RELEASE=$FREESPEECH_MAJOR_VERSION.$FREESPEECH_MINOR_VERSION
LT_CURRENT=`expr $FREESPEECH_MICRO_VERSION - $FREESPEECH_INTERFACE_AGE`
LT_REVISION=$FREESPEECH_INTERFACE_AGE
LT_AGE=`expr $FREESPEECH_BINARY_AGE - $FREESPEECH_INTERFACE_AGE`
AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

# For automake.
VERSION=$FREESPEECH_VERSION
PACKAGE=VQ


AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AM_MAINTAINER_MODE

AC_CANONICAL_HOST
AC_DISABLE_STATIC
AM_PROG_LIBTOOL

AC_FLOWDESIGNER_CHECKS

AC_OUTPUT([Makefile include/Makefile src/Makefile
	])

