dnl Process this file with autoconf to produce a configure script. -*-m4-*-

AC_INIT(include/fortran.h)

FLOWDESIGNER_MAJOR_VERSION=0
FLOWDESIGNER_MINOR_VERSION=9
FLOWDESIGNER_MICRO_VERSION=0
FLOWDESIGNER_VERSION=$FLOWDESIGNER_MAJOR_VERSION.$FLOWDESIGNER_MINOR_VERSION.$FLOWDESIGNER_MICRO_VERSION
FLOWDESIGNER_INTERFACE_AGE=0
FLOWDESIGNER_BINARY_AGE=0


AC_SUBST(FLOWDESIGNER_MAJOR_VERSION)
AC_SUBST(FLOWDESIGNER_MINOR_VERSION)
AC_SUBST(FLOWDESIGNER_MICRO_VERSION)
AC_SUBST(FLOWDESIGNER_INTERFACE_AGE)
AC_SUBST(FLOWDESIGNER_BINARY_AGE)
AC_SUBST(FLOWDESIGNER_VERSION)

# libtool versioning
LT_RELEASE=$FLOWDESIGNER_MAJOR_VERSION.$FLOWDESIGNER_MINOR_VERSION
LT_CURRENT=`expr $FLOWDESIGNER_MICRO_VERSION - $FLOWDESIGNER_INTERFACE_AGE`
LT_REVISION=$FLOWDESIGNER_INTERFACE_AGE
LT_AGE=`expr $FLOWDESIGNER_BINARY_AGE - $FLOWDESIGNER_INTERFACE_AGE`
AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

# For automake.
VERSION=$FLOWDESIGNER_VERSION
PACKAGE=lapackflow


AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AM_MAINTAINER_MODE

AC_CANONICAL_HOST

AC_DISABLE_STATIC
#CYGWIN LDFLAGS ADDITION
case $host_os in
  *cygwin* ) CYGWIN="yes";;
         * ) CYGWIN="no";;
esac


if test "$CYGWIN" = "yes"; then
	AC_LIBTOOL_WIN32_DLL
	CYGWIN_LDFLAGS="-no-undefined"
else
	CYGWIN_LDFLAGS=""
fi
AM_CONDITIONAL(WITH_CYGWIN, test "$CYGWIN" = "yes")
AC_SUBST(CYGWIN_LDFLAGS)
AM_PROG_LIBTOOL

case "$host_os" in 
hpux*) OS=HPUX ;;
linux*) OS=LINUX ;;
freebsd*) OS=FREEBSD ;;
solaris*) OS=SOLARIS ;;
esac
AC_DEFINE_UNQUOTED(${OS})
dnl Initialize libtool.

AC_LIBTOOL_KLUDGE

dnl Checks for programs.

AM_C_PROTOTYPES
AC_PROG_F77
AC_PROG_CXX
AC_LANG_CPLUSPLUS
AC_PROG_MAKE_SET
dnl AC_PROG_RANLIB

dnl Check for header files
AC_CHECK_HEADERS(values.h float.h machine/soundcard.h sys/soundcard.h)
AC_HASH_MAP

dnl Checks for libraries.

dnl Test for math library, and define LIBS
AC_CHECK_LIB(m, sin)
AC_CHECK_LIB(blas, strsm_)
dnl LIBS='-lblas -lm'
AC_CHECK_LIB(lapack, sgetrs_)
dnl AC_CHECK_LIB(dl, dlopen)
dnl AC_CHECK_LIB(pthread, pthread_create)
AC_THREAD

dnl test for SGI audio library (required by SndLib) and define LIBS
dnl AC_PATH_FFTW


dnl Checks for library functions.

dnl Output the makefiles and version.h.

AC_OUTPUT([Makefile include/Makefile src/Makefile \
	])

