dnl Process this file with autoconf to produce a configure script. -*-m4-*-

AC_INIT(n-files/test.n)

FLOWDESIGNER_MAJOR_VERSION=0
FLOWDESIGNER_MINOR_VERSION=9
FLOWDESIGNER_MICRO_VERSION=0
FLOWDESIGNER_VERSION=$FLOWDESIGNER_MAJOR_VERSION.$FLOWDESIGNER_MINOR_VERSION.$FLOWDESIGNER_MICRO_VERSION
FLOWDESIGNER_INTERFACE_AGE=0
FLOWDESIGNER_BINARY_AGE=0


AC_SUBST(FLOWDESIGNER_MAJOR_VERSION)
AC_SUBST(FLOWDESIGNER_MINOR_VERSION)
AC_SUBST(FLOWDESIGNER_MICRO_VERSION)
AC_SUBST(FLOWDESIGNER_INTERFACE_AGE)
AC_SUBST(FLOWDESIGNER_BINARY_AGE)
AC_SUBST(FLOWDESIGNER_VERSION)

# libtool versioning
LT_RELEASE=$FLOWDESIGNER_MAJOR_VERSION.$FLOWDESIGNER_MINOR_VERSION
LT_CURRENT=`expr $FLOWDESIGNER_MICRO_VERSION - $FLOWDESIGNER_INTERFACE_AGE`
LT_REVISION=$FLOWDESIGNER_INTERFACE_AGE
LT_AGE=`expr $FLOWDESIGNER_BINARY_AGE - $FLOWDESIGNER_INTERFACE_AGE`
AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

# For automake.
VERSION=$FLOWDESIGNER_VERSION
PACKAGE=Octave


AC_PATH_PROG(OCTAVE_CONFIG,octave-config,no,$PATH)
if test "OCTAVE_CONFIG" = no; then
	AC_MSG_ERROR( Cannot find octave-config)
fi

OCTAVE_LIB=`$OCTAVE_CONFIG -p OCTLIBDIR`
OCTAVE_INCLUDE=`$OCTAVE_CONFIG -p OCTINCLUDEDIR`
XML2_INCLUDE=`xml2-config --cflags`
XML2_LIB=`xml2-config --libs`

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AM_MAINTAINER_MODE

AC_CANONICAL_HOST
AC_DISABLE_STATIC

#CYGWIN LDFLAGS ADDITION
case $host_os in
  *cygwin* ) CYGWIN="yes";;
         * ) CYGWIN="no";;
esac


if test "$CYGWIN" = "yes"; then
	AC_LIBTOOL_WIN32_DLL
	CYGWIN_LDFLAGS="-no-undefined"
else
	CYGWIN_LDFLAGS=""
fi
AM_CONDITIONAL(WITH_CYGWIN, test "$CYGWIN" = "yes")
AC_SUBST(CYGWIN_LDFLAGS)

AM_PROG_LIBTOOL

AC_FLOWDESIGNER_CHECKS

AC_SUBST(OCTAVE_LIB)
AC_SUBST(OCTAVE_INCLUDE)
AC_SUBST(XML2_INCLUDE)
AC_SUBST(XML2_LIB)

AC_OUTPUT([Makefile \
	include/Makefile \
	src/Makefile \
	n-files/Makefile
	])

