AC_INIT(src/main.cc)

dnl AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(VFlow, 0.9.1)


AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CXX
AC_ARG_PROGRAM
AC_CANONICAL_HOST
AC_DISABLE_STATIC
#CYGWIN LDFLAGS ADDITION
case $host_os in
  *cygwin* ) CYGWIN="yes";;
         * ) CYGWIN="no";;
esac


if test "$CYGWIN" = "yes"; then
	AC_LIBTOOL_WIN32_DLL
	CYGWIN_LDFLAGS="-no-undefined"
else
	CYGWIN_LDFLAGS=""
fi

AM_CONDITIONAL(WITH_CYGWIN, test "$CYGWIN" = "yes")
AC_SUBST(CYGWIN_LDFLAGS)
AM_PROG_LIBTOOL

dnl AC_INST_EXTENSIONS
AC_DEFINE_UNQUOTED(FLOWDESIGNER_VERSION, "${VERSION}")

case "$host_os" in 
hpux*) OS=HPUX ;;
linux*) OS=LINUX ;;
freebsd*) OS=FREEBSD ;;
solaris*) OS=SOLARIS ;;
darwin*) OS=DARWIN ;;
esac
AC_DEFINE_UNQUOTED(${OS})

dnl AC_LIBTOOL_KLUDGE

FLOWDESIGNER_MAJOR_VERSION=0
FLOWDESIGNER_MINOR_VERSION=9
FLOWDESIGNER_MICRO_VERSION=1
FLOWDESIGNER_VERSION=$FLOWDESIGNER_MAJOR_VERSION.$FLOWDESIGNER_MINOR_VERSION.$FLOWDESIGNER_MICRO_VERSION
FLOWDESIGNER_INTERFACE_AGE=0
FLOWDESIGNER_BINARY_AGE=0

AC_SUBST(FLOWDESIGNER_MAJOR_VERSION)
AC_SUBST(FLOWDESIGNER_MINOR_VERSION)
AC_SUBST(FLOWDESIGNER_MICRO_VERSION)
AC_SUBST(FLOWDESIGNER_INTERFACE_AGE)
AC_SUBST(FLOWDESIGNER_BINARY_AGE)
AC_SUBST(FLOWDESIGNER_VERSION)

# libtool versioning
LT_RELEASE=$FLOWDESIGNER_MAJOR_VERSION.$FLOWDESIGNER_MINOR_VERSION
LT_CURRENT=`expr $FLOWDESIGNER_MICRO_VERSION - $FLOWDESIGNER_INTERFACE_AGE`
LT_REVISION=$FLOWDESIGNER_INTERFACE_AGE
LT_AGE=`expr $FLOWDESIGNER_BINARY_AGE - $FLOWDESIGNER_INTERFACE_AGE`
AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

pkg_modules="QtCore QtGui"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_LANG_CPLUSPLUS
AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT([
Makefile \
src/Makefile \
include/Makefile
])



