AC_INIT(Node.h)

PACKAGE=@PROJECT_NAME@
VERSION=@PROJECT_VERSION@
AC_SUBST(VERSION)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AM_MAINTAINER_MODE

AC_CANONICAL_HOST
AC_DISABLE_STATIC
#CYGWIN LDFLAGS ADDITION
case $host_os in
  *cygwin* ) CYGWIN="yes";;
         * ) CYGWIN="no";;
esac


if test "$CYGWIN" = "yes"; then
	AC_LIBTOOL_WIN32_DLL
	CYGWIN_LDFLAGS="-no-undefined"
else
	CYGWIN_LDFLAGS=""
fi

AC_SUBST(CYGWIN_LDFLAGS)
AM_PROG_LIBTOOL

AC_FLOWDESIGNER_CHECKS
AC_CHECK_HEADER(sstream, rm -f sstream, cp -pf sstream.unused sstream)

AC_OUTPUT([Makefile])

