override includedir=${prefix}/include/overflow
override datadir=${prefix}/share/overflow
override libdir=${prefix}/share/overflow/lib

## Process this file with automake to produce Makefile.in. -*-Makefile-*-

# Disable automatic dependency tracking if using other tools than gcc and gmake
#AUTOMAKE_OPTIONS = no-dependencies

SUBDIRS = src m
