AC_INIT(src/vflow.cc)

dnl AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(VFlow, 0.6.2)

includedir=$includedir/overflow
datadir=$datadir/overflow
libdir=$datadir/lib


AM_MAINTAINER_MODE

AM_ACLOCAL_INCLUDE(macros)

GNOME_INIT

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AC_PROG_CXX
AC_ARG_PROGRAM
AC_DISABLE_STATIC
AM_PROG_LIBTOOL

AC_INST_EXTENSIONS
AC_DEFINE_UNQUOTED(OVERFLOW_VERSION, "${VERSION}")

case "$host_os" in 
hpux*) OS=HPUX ;;
linux*) OS=LINUX ;;
freebsd*) OS=FREEBSD ;;
solaris*) OS=SOLARIS ;;
esac
AC_DEFINE_UNQUOTED(${OS})

AC_LIBTOOL_KLUDGE


GNOME_COMPILE_WARNINGS
AM_GNU_GETTEXT

AC_LANG_CPLUSPLUS

AC_HASH_MAP
dnl AC_CHECK_LIB(pthread, pthread_create)
AC_THREAD

AC_CHECK_FUNCS(pthread_cancel)

GNOME_XML_LIB=`gnome-config --libs xml`
GNOME_XML_INCLUDE=`gnome-config --cflags xml`
GNOME_PIXBUF_INCLUDE=`gnome-config --cflags gdk_pixbuf gnomecanvaspixbuf`
AC_SUBST(GNOME_XML_LIB)
AC_SUBST(GNOME_XML_INCLUDE)
AC_SUBST(GNOME_PIXBUF_INCLUDE)

GNOME_GTHR_LIB=`glib-config --libs gthread`
GNOME_GTHR_INCLUDE=`glib-config --cflags gthread`
GNOME_PIXBUF_LIB=`gnome-config --libs gdk_pixbuf gnomecanvaspixbuf`
AC_SUBST(GNOME_GTHR_LIB)
AC_SUBST(GNOME_GTHR_INCLUDE)
AC_SUBST(GNOME_PIXBUF_LIB)

AC_PATH_FFTW

ALL_LINGUAS=""

dnl AC_CHECK_HEADERS(gtkextra/gtkextra.h)
AC_CHECK_LIB(gtkextra, gtk_plot_canvas_new)

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)


#if test "x${prefix}" = "xNONE"; then
#  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
#else
#  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
#fi

AC_OUTPUT([ m4/Makefile  intl/Makefile m4/Makefile  intl/Makefile m4/Makefile 
Makefile
macros/Makefile
src/Makefile
n-files/Makefile
include/Makefile
intl/Makefile
po/Makefile.in
pixmaps/Makefile
])



