AC_INIT(src/vflow.cc)



dnl AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(VFlow, 0.7.0)

includedir=$includedir/overflow
datadir=$datadir/overflow
libdir=$datadir/lib


AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CXX
AC_ARG_PROGRAM
AC_DISABLE_STATIC
AM_PROG_LIBTOOL

AC_INST_EXTENSIONS
AC_DEFINE_UNQUOTED(OVERFLOW_VERSION, "${VERSION}")

case "$host_os" in 
hpux*) OS=HPUX ;;
linux*) OS=LINUX ;;
freebsd*) OS=FREEBSD ;;
solaris*) OS=SOLARIS ;;
esac
AC_DEFINE_UNQUOTED(${OS})

AC_LIBTOOL_KLUDGE


pkg_modules="libgnomeui-2.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=VFlow
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT


AC_LANG_CPLUSPLUS

AC_HASH_MAP
dnl AC_CHECK_LIB(pthread, pthread_create)
AC_THREAD

AC_CHECK_FUNCS(pthread_cancel)

GNOME_XML_LIB=`xml2-config --libs`
GNOME_XML_INCLUDE=`xml2-config --cflags`
GNOME_PIXBUF_INCLUDE=`pkg-config --cflags gdk-pixbuf-2.0 libgnomecanvas-2.0`
AC_SUBST(GNOME_XML_LIB)
AC_SUBST(GNOME_XML_INCLUDE)
AC_SUBST(GNOME_PIXBUF_INCLUDE)

GNOME_GTHR_LIB=`pkg-config --libs gthread-2.0`
GNOME_GTHR_INCLUDE=`pkg-config --cflags gthread-2.0`
GNOME_PIXBUF_LIB=`pkg-config --libs gdk-pixbuf-2.0 libgnomecanvas-2.0`
AC_SUBST(GNOME_GTHR_LIB)
AC_SUBST(GNOME_GTHR_INCLUDE)
AC_SUBST(GNOME_PIXBUF_LIB)

AC_PATH_FFTW

ALL_LINGUAS=""

dnl AC_CHECK_HEADERS(gtkextra/gtkextra.h)
AC_CHECK_LIB(gtkextra, gtk_plot_canvas_new)

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)


#if test "x${prefix}" = "xNONE"; then
#  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
#else
#  AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
#fi

AC_OUTPUT([
Makefile
src/Makefile
n-files/Makefile
include/Makefile
po/Makefile.in
pixmaps/Makefile
])



