override includedir=${prefix}/include/overflow
override datadir=${prefix}/share/overflow
override libdir=${prefix}/share/overflow/lib


include_HEADERS = FuzzyFunction.h \
	FuzzyModel.h \
	FuzzyRule.h \
	FuzzySet.h \
	GenericModel.h \
	TrapezoidalFunction.h \
	TriangularFunction.h \
	FuzzyOperators.h \
	Tokenizer.h \
	InferenceModel.h
