override includedir=${prefix}/include/flowdesigner
override datadir=${prefix}/share/flowdesigner
override libdir=${prefix}/share/flowdesigner/lib


include_HEADERS = FuzzyFunction.h \
	FuzzyModel.h \
	FuzzyRule.h \
	FuzzySet.h \
	GenericModel.h \
	TrapezoidalFunction.h \
	TriangularFunction.h \
	FuzzyOperators.h \
	Tokenizer.h \
	InferenceModel.h
