override includedir=${prefix}/lib/flowdesigner/toolbox/FuzzyEngine
override datadir=${prefix}/lib/flowdesigner/toolbox/FuzzyEngine
override libdir=${prefix}/lib/flowdesigner/toolbox/FuzzyEngine


include_HEADERS = FuzzyFunction.h \
	FuzzyModel.h \
	FuzzyRule.h \
	FuzzySet.h \
	GenericModel.h \
	TrapezoidalFunction.h \
	TriangularFunction.h \
	FuzzyOperators.h \
	Tokenizer.h \
	InferenceModel.h
