UTOMAKE_OPTIONS = no-dependencies

include_HEADERS = covariance.h \
	gaussian.h \
	gmm.h \
	hmm.h \
	model.h \
	state.h \
	GMMScore.h \
	GMMTrain.h \
	mean.h \
	covariance_set.h \
	mean_set.h \
	gaussian_set.h \
	audioinfo.h \
	acoustic_model.h \
	gmm_set.h \
	GMMScore.h \
	GMMTrain.h \
	viterbi.h \
	DiagGMM.h
