override includedir=${prefix}/include/overflow
override datadir=${prefix}/share/overflow
override libdir=${prefix}/share/overflow/lib


include_HEADERS = covariance.h \
	gaussian.h \
	gmm.h \
	hmm.h \
	model.h \
	state.h \
	GMMScore.h \
	mean.h \
	covariance_set.h \
	mean_set.h \
	gaussian_set.h \
	audioinfo.h \
	acoustic_model.h \
	gmm_set.h \
	viterbi.h \
	DiagGMM.h
