override includedir=${prefix}/include/flowdesigner
override datadir=${prefix}/share/flowdesigner
override libdir=${prefix}/share/flowdesigner/lib


include_HEADERS = covariance.h \
	gaussian.h \
	gmm.h \
	hmm.h \
	model.h \
	state.h \
	GMMScore.h \
	mean.h \
	covariance_set.h \
	mean_set.h \
	gaussian_set.h \
	audioinfo.h \
	acoustic_model.h \
	gmm_set.h \
	viterbi.h \
	DiagGMM.h
